<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="techtest.ehealthinnovation.org.healthapp.fragments.PatientDetailFragment" >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/patient_detail_family"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient_detail_fname_text"
            android:hint="@string/patient_detail_fname_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/patient_detail_given"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient_detail_gname_text"
            android:hint="@string/patient_detail_gname_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/patient_detail_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient_detail_gender_text"
            android:hint="@string/patient_detail_gender_hint" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/patient_detail_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/patient_detail_birthday_text"
            android:hint="@string/patient_detail_birthday_hint" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>