<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="techtest.ehealthinnovation.org.healthapp.fragments.PatientDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/patient_create_family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/patient_detail_fname_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/patient_create_given"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/patient_detail_gname_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/patient_create_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/patient_detail_gender_hint" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/patient_create_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patient_create_birthday" />

        <DatePicker
            android:id="@+id/patient_create_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/patient_create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/patient_create_button" />

    </LinearLayout>

</ScrollView>